--- a/JiraApiApp/App.config
+++ b/JiraApiApp/App.config
@@ -4,8 +4,11 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <appSettings>
-    <add key="username" value="" />
-    <add key="password" value="" />
-    <add key="url" value="" />
+    <add key = "username" value = "" />
+    <add key = "password" value = "" />
+    <add key = "url" value = "" />
+    <add key = "mailFrom" value = ""/>
+    <add key = "mailFromPass" value = ""/>
+    <add key = "mailTo" value = ""/> 
   </appSettings>
 </configuration>
