added project code

--- a/JiraApiApp/App.config
+++ b/JiraApiApp/App.config
@@ -7,6 +7,7 @@
     <add key = "username" value = "" />
     <add key = "password" value = "" />
     <add key = "url" value = "" />
+    <add key = "projectCode" value = ""/>
     <add key = "mailFrom" value = ""/>
     <add key = "mailFromPass" value = ""/>
     <add key = "mailTo" value = ""/> 
